--- a/README.md.html
+++ b/README.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3/node-mysql/READMEmd", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3//README.md", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container"><a id="fork" href="https://github.com/alinex/node-mysql" title="Fork me on GitHub"></a><div class="docs markdown">
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-mysql" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="docs markdown">
 <div class="pilwrap" id="package%3A%20alinex-mysql">
   <h1>
     <a href="#package%3A%20alinex-mysql" name="package%3A%20alinex-mysql" class="pilcrow">&#182;</a>
@@ -270,6 +270,7 @@ following entries:</p>
 <li>query(sql, data, cb) - run sql directly</li>
 <li>queryOne(sql, data, cb) - get one field only</li>
 <li>queryRow(sql, data, cb) - get one row as data object</li>
+<li>update(sql, data, cb) - execute query and return number of affected rows</li>
 <li>insertId(sql, data, cb) - execute query and return last insert id</li>
 </ul>
 
