--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3//Changelog.md", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3/node-mysql/Changelogmd", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -24,6 +24,9 @@
     <div id="headings">
       <div class="heading h1">
         <a href="#version%20changes">Version changes</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%200.2.1%20(2015-03-20)">Version 0.2.1 (2015-03-20)</a>
       </div>
       <div class="heading h2">
         <a href="#version%200.2.0%20(2015-03-17)">Version 0.2.0 (2015-03-17)</a>
@@ -49,7 +52,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-mysql" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="docs markdown">
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-mysql" title="Fork me on GitHub"></a><div class="docs markdown">
 <div class="pilwrap" id="version%20changes">
   <h1>
     <a href="#version%20changes" name="version%20changes" class="pilcrow">&#182;</a>
@@ -60,6 +63,19 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%200.2.1%20(2015-03-20)">
+  <h2>
+    <a href="#version%200.2.1%20(2015-03-20)" name="version%200.2.1%20(2015-03-20)" class="pilcrow">&#182;</a>
+    Version 0.2.1 (2015-03-20)
+  </h2>
+</div>
+
+
+<ul>
+- 
+</ul>
 
 
 <div class="pilwrap" id="version%200.2.0%20(2015-03-17)">
