--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -26,6 +26,9 @@
         <a href="#version%20changes">Version changes</a>
       </div>
       <div class="heading h2">
+        <a href="#version%200.2.2%20(2015-06-12)">Version 0.2.2 (2015-06-12)</a>
+      </div>
+      <div class="heading h2">
         <a href="#version%200.2.1%20(2015-03-20)">Version 0.2.1 (2015-03-20)</a>
       </div>
       <div class="heading h2">
@@ -63,6 +66,30 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%200.2.2%20(2015-06-12)">
+  <h2>
+    <a href="#version%200.2.2%20(2015-06-12)" name="version%200.2.2%20(2015-06-12)" class="pilcrow">&#182;</a>
+    Version 0.2.2 (2015-06-12)
+  </h2>
+</div>
+
+
+<ul>
+<li>Fixed simple connection test case.</li>
+<li>Upgraded dependend modules.</li>
+<li>Don't throw error while establishing a connection and retry.</li>
+<li>Tests</li>
+<li>Updated tests to run on travis.</li>
+<li>Use environment variable in test config.</li>
+<li>Try to use travis for database tests.</li>
+<li>Add comments to shortcut functions.</li>
+<li>Configure to test on travis.</li>
+<li>Add database creation to travis script.</li>
+<li>Replace alinex-once module with alinex-async.</li>
+<li>Fixed reference to new coffeescript standard.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%200.2.1%20(2015-03-20)">
